# stricter-abi-bug

program/: Cargo.toml
program/src/: lib.rs  tests.rs
program/src/instructions/: mod.rs  reproduction1.rs  reproduction2.rs  reproduction3.rs
program/src/token2022/: initialize_group.rs  initialize_group_member_pointer.rs  initialize_group_pointer.rs  initialize_member.rs  mod.rs
